// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`show page can mount 1`] = `
<div class="ShowPage">
	<div class="container">
		<actionbarshow-stub></actionbarshow-stub>
	</div>
	<commandformmodal-stub></commandformmodal-stub>
	<commandviewpanel-stub></commandviewpanel-stub>
</div>
`;

exports[`show page can mount hidden section 1`] = `
<div class="ShowPage">
	<div class="container">
		<actionbarshow-stub formurl="formUrl"></actionbarshow-stub>
		<div class="mt-4 pt-2">
			<section-stub section="[object Object]" fieldsrowclass="function () { [native code] }" layout="card" class="ShowPage__section" style="display: none;"></section-stub>
		</div>
	</div>
	<commandformmodal-stub></commandformmodal-stub>
	<commandviewpanel-stub></commandviewpanel-stub>
</div>
`;

exports[`show page can mount with fields 1`] = `
<div class="ShowPage">
	<div class="container">
		<actionbarshow-stub formurl="formUrl"></actionbarshow-stub>
		<div class="mt-4 pt-2">
			<section-stub section="[object Object]" fieldsrowclass="function () { [native code] }" layout="card" class="ShowPage__section"></section-stub>
		</div>
	</div>
	<commandformmodal-stub></commandformmodal-stub>
	<commandviewpanel-stub></commandviewpanel-stub>
</div>
`;

exports[`show page can mount with no container section 1`] = `
<div class="ShowPage">
	<div class="container">
		<actionbarshow-stub formurl="formUrl"></actionbarshow-stub>
		<div class="mt-4 pt-2">
			<section-stub section="[object Object]" fieldsrowclass="function () { [native code] }" layout="contents" class="ShowPage__section"></section-stub>
		</div>
	</div>
	<commandformmodal-stub></commandformmodal-stub>
	<commandviewpanel-stub></commandviewpanel-stub>
</div>
`;

exports[`show page can mount with unknown field 1`] = `
<div class="ShowPage">
	<div class="container">
		<actionbarshow-stub formurl="formUrl"></actionbarshow-stub>
		<div class="mt-4 pt-2">
			<section-stub section="[object Object]" fieldsrowclass="function () { [native code] }" layout="card" class="ShowPage__section"></section-stub>
		</div>
	</div>
	<commandformmodal-stub></commandformmodal-stub>
	<commandviewpanel-stub></commandviewpanel-stub>
</div>
`;
